<resources>
    <string name="app_name">Proyecto Kotlinense</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="image_desc">Descripcion de la Imagen</string>
    <string name="name_label">Nombre</string>
    <string name="name_hint">Introduzca Nombre</string>
    <string name="upload_image">Upload Image</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="price_hint">Introduzca Precio</string>
    <string name="image_url_hint">Enter Image URL</string>
    <string name="load_image">Cargar Imagen</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="tipo_de_pago">Tipo de Pago</string>
    <string name="rol">Rol</string>
    <string name="descripcion">Descripción</string>
    <string name="amigos">Amigos</string>
    <string name="grupos">Grupos</string>
    <string name="perfil">Perfil</string>
</resources>